# 3-python-package-exercise-loki

./: Pipfile  README.md  project.toml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/harry_potter/: __main__.py  arrayFile.py  array_File.py  create_wizard.py  cretate_wizard.py  house_quiz_questions.py
tests/: testAnimal.py  test_create_wizard.py  test_name_house.py
