[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "harry_potter"
description = "A python package "
version = "0.0.2"
authors = [
  { name="Samuel Shally", email="ss13104@nyu.edu" },
  { name="Ana Pacheco", email="asp9060@nyu.edu" },
  { name="Lemon Ruan", email="qr2010@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki/issues"

[project.scripts]
projectPack = "projectPack.__main__:main"

[testpypi]
username = __token__
password = pypi-AgENdGVzdC5weXBpLm9yZwIkM2FlZTdiZDgtOTZhZS00MDFkLTg0YWMtYWVlYjNhYzMwNmU2AAIqWzMsIjZmOThhM2ZmLTUyNGEtNDlhNy05OTc1LTY5MjYxMGU0NjI5MiJdAAAGIK-cvfdaoti5h_hcCLBV3CV4ZY6mwNekS0HTtIIpChns