[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "harry_potter"
description = "A python package that allows users to create their own wizard. "
version = "0.2.0"
authors = [
  { name="Samuel Shally", email="ss13104@nyu.edu" },
  { name="Ana Pacheco", email="asp9060@nyu.edu" },
  { name="Lemon Ruan", email="qr2010@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-loki/issues"

[project.scripts]
harry_potter = "harry_potter.__main__:main"

